# piper-phonemize

./: meson.build  meson_options.txt
src/: meson.build
subprojects/: espeak-ng.wrap  onnxruntime.wrap
subprojects/packagefiles/onnxruntime/: meson.build
